# ChangeLog for games-emulation/gens-gs
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7.ebuild:
  Style fixes.

  04 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -gens-gs-7_pre4.ebuild,
  -gens-gs-7_pre5.ebuild, +gens-gs-7.ebuild:
  Bumped. Added debug flag. Removed cruft.

  14 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7_pre4.ebuild,
  gens-gs-7_pre5.ebuild:
  Changed SRC_URI to save some trouble in the future.

  12 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7_pre4.ebuild,
  +gens-gs-7_pre5.ebuild:
  Bumped. Some clean-up.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7_pre4.ebuild,
  +metadata.xml:
  Fixed deps and added metadata.xml.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> +gens-gs-7_pre4.ebuild:
  Initial ebuild.
