@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gens-gs-9999 (22 Feb 2010)
+
+  22 Feb 2010; Michał Ziąbkowski <mziab@o2.pl> +gens-gs-9999.ebuild:
+  Added live git ebuild.
+
   29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7.ebuild:
   Style fixes.
 
